--- a/ClonerDemo/scripts/tsconfig.json
+++ b/ClonerDemo/scripts/tsconfig.json
@@ -1,1 +1,28 @@
-{"compilerOptions":{"allowJs":true,"baseUrl":"/var/folders/0b/m5nt7ct14tz66h4d21c175600000gn/T/136d-8bb2-9447-3b43/164691b9d88ce4d1e9c40aa86b76dcb23/skylight-typedefs","checkJs":true,"esModuleInterop":true,"lib":["ES2019"],"outDir":"/var/folders/0b/m5nt7ct14tz66h4d21c175600000gn/T/136d-8bb2-9447-3b43/164691b9d88ce4d1e9c40aa86b76dcb23/skylight-typedefs/out-dir"},"include":["*.js","*.ts"]}
+{
+  "compilerOptions": {
+    "allowJs": true,
+    "baseUrl": "/var/folders/0b/m5nt7ct14tz66h4d21c175600000gn/T/482c-2673-74a1-c392/164691b9d88ce4d1e9c40aa86b76dcb23",
+    "checkJs": true,
+    "esModuleInterop": true,
+    "lib": [
+      "ES2019"
+    ],
+    "outDir": "/var/folders/0b/m5nt7ct14tz66h4d21c175600000gn/T/482c-2673-74a1-c392/164691b9d88ce4d1e9c40aa86b76dcb23/out-dir",
+    "paths": {
+      "*": [
+        "skylight-typedefs/*",
+        "skylight-node_modules/*"
+      ]
+    },
+    "typeRoots": [
+      "/var/folders/0b/m5nt7ct14tz66h4d21c175600000gn/T/482c-2673-74a1-c392/164691b9d88ce4d1e9c40aa86b76dcb23/skylight-node_modules/@types"
+    ],
+    "types": [
+      "node"
+    ]
+  },
+  "include": [
+    "./**/*.js",
+    "./**/*.ts"
+  ]
+}
